--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<h1>Time and Space Complexity</h1>
+	<p>Time complexityis understood as the time taken by a program to run and complete the given task.As a programmer,your goal should be reduce the time complexity of the code by optimizing it and make it more efficient.</p>
+	<p><b>Space Complexity</b> is  related to the memory occupied by the program .For Example,if a program takes an array of size n as input,the space complexity of the program becomes O(n). </p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
